created dark mode post

--- a/pages/2020/capitalism-always-wins.mdx
+++ b/pages/2020/capitalism-always-wins.mdx
@@ -1,5 +1,5 @@
 import Layout from "../../components/mdx/Layout"
-export default ({ children }) => <Layout>{children}</Layout>
+export default ({ children }) => <Layout pagetitle='Why Capitalism always wins'>{children}</Layout>
 
 # Why Capitalism always wins
 
