--- a/pages/2020/mayeutica.mdx
+++ b/pages/2020/mayeutica.mdx
@@ -1,5 +1,5 @@
 import Layout from "../../components/mdx/Layout"
-export default ({ children }) => <Layout title='Mayéutica'>{children}</Layout>
+export default ({ children }) => <Layout pagetitle='Mayéutica'>{children}</Layout>
 
 # Mayéutica
 
