--- a/pages/2020/la-derecha-diario.mdx
+++ b/pages/2020/la-derecha-diario.mdx
@@ -1,5 +1,5 @@
 import Layout from "../../components/mdx/Layout"
-export default ({ children }) => <Layout>{children}</Layout>
+export default ({ children }) => <Layout pagetitle='La Derecha Diario'>{children}</Layout>
 
 # La Derecha Diario
 
