--- a/pages/2020/capitalism-always-wins.mdx
+++ b/pages/2020/capitalism-always-wins.mdx
@@ -3,24 +3,24 @@ export default ({ children }) => <Layout pagetitle='Why Capitalism always wins'>
 
 # Why Capitalism always wins
 
-It's quite simple, actually. Humans act on incentives (all living things do, but we only care about human ones), and Capitalism is a system that align those perfectly. There are no systems more efficient than Capitalism, because no other system understands human incentives. Let's take a look.
+It's quite simple, actually. Humans act on incentives (all living things do, but we only care about human ones), and capitalism is the system that aligns those perfectly. There really aren't any systems more efficient than capitalism because no other system understands human incentives the way capitalism does. Let's take a look.
 
 ## Comunism
 
-In summary, Comunism says, "We want everyone to be equally rich (or poor!), no matter if some create more wealth than others." It basically removes the economic incentive for creating wealth. 
+In summary, comunism says, "We want everyone to be equally rich (or poor), no matter if some create more wealth than others." It basically removes the economic incentive for creating wealth. 
 
-- The ones that create wealth now are less motivated to create
+- The ones that create wealth are now less motivated to create
 - The ones that don't create wealth and still have access to it, well, why would they start creating?
 
-The only option that's left is forcing people to work, and that's where Comunist experiments usually (not to say always) end up.
+The only option that's left is forcing people to work, and that's where comunist experiments usually (not to say always) end up.
 
-> It is not from the benevolence of the butcher, the brewer, or the baker that we expect our dinner, but from their regard to their own self-interest.
+> "It is not from the benevolence of the butcher, the brewer, or the baker that we expect our dinner, but from their regard to their own self-interest." - Adam Smith
 
-Of course. People create wealth for themselves (and for their families!). Like it or not, we are like that. This is the fact that Comunism blindly and naively ignores.
+Of course. People create wealth for themselves (and for their close relationships). Like it or not, we are like that. This is the fact that comunism blindly and naively ignores.
 
 ## Socialism
 
-Socialism is basically a more diluted form of communism. They practice it through high taxes instead of complete expropiation, but the concept is the same. They want everyone to be equally rich. Oh, that's nice.
+Socialism is basically a more diluted form of communism. They practice it through high taxes instead of complete expropiation, but the concept is the same. They want everyone to be equally rich. Cute.
 
 Socialists are usually good people that don't really think it through, and by default they land on socialism. It's an attractive idea: we could all be equally rich! Sadly, it ends the same way: 
 
@@ -28,14 +28,29 @@ Socialists are usually good people that don't really think it through, and by de
 - The rich, seeing that they can't fully enjoy the fruits of their work, are less incentivized to create
 - The poor, being able to get by without working, why would they create?
 
-I take the extremes (the rich and the poor) but you can imagine that in the middle the same thing happens. If a man can be assured a standard without working, he'll tend to create less. If no matter how hard he works, he lands on the same standard, he'll tend to create less aswell.
+I take the extremes (the rich and the poor) but you can imagine that in the middle the same thing happens. If a man can be assured a standard without working, he'll tend to create less. If, no matter how hard he works, he lands on the same standard, he'll tend to create less aswell.
 
-## Keynesianism
+All these micro deincentivizations compound, and they result in misery.
 
-Keynesianism, in a way, tries to be a mix between capitalism and socialism. It bases itself on the idea that "The Market" is good, but it has flaws. To solve this, a big welfare state.
+# And all other systems?
 
-# And back to Capitalism
+Other systems, the ones that land in the "middle", take some things from capitalism and others from comunism and socialism. They are better than plain comunism, yes, but they are worse than pure capitalism. They always are, because there's always some incentive that is lost.
 
-Capitalism proposes one simple rule: what you create you can keep. What is yours will be protected. And that's it. This way people want to create wealth, because they get to keep it. More even, they "compete" against each other to be best creators of value and wealth. This is incentives aligned perfectly.
+With every political-economical decision that your government does, ask yourself: How does this policy affect incentives? Will people want to create more because of this? If the answer is "no", then it's bad policy.
 
-"And if you don't like competition?" Don't worry, you don't <i>have</i> to compete! If you want, you can live with what you create yourself. Wealth is not a zero-sum game. If it was, we could not grow in population and still be more prosperous every day!
+# The Beauty Of Capitalism
+
+If you think about it, every law in a pure capitalist system is made to improve incentives. 
+
+- "You'll get to keep what you make"
+- "We'll keep you safe from criminals, so you can focus on being more prosperous"
+
+Yes please.
+
+# Arguments Against?
+
+The root of most of the arguments against capitalism is the fallacy of thinking that wealth is a zero-sum game. That if someone is rich, it means some other fellow is poor. If you assume that, then there's a case for more socialist systems. After all, no one creates wealth, but only takes it away from someone.
+
+Fortunately, this is not true. Wealth is created, not taken. So lets create and exchange!
+
+Thanks for reading.
