headings, blockquote, typos...

--- a/pages/2020/capitalism-always-wins.mdx
+++ b/pages/2020/capitalism-always-wins.mdx
@@ -5,7 +5,7 @@ export default ({ children }) => <Layout pagetitle='Why Capitalism always wins'>
 
 It's quite simple, actually. Humans act on incentives (all living things do, but we only care about human ones), and capitalism is the system that aligns those perfectly. There really aren't any systems more efficient than capitalism because no other system understands human incentives the way capitalism does. Let's take a look.
 
-## Comunism
+# Comunism
 
 In summary, comunism says, "We want everyone to be equally rich (or poor), no matter if some create more wealth than others." It basically removes the economic incentive for creating wealth. 
 
@@ -18,7 +18,7 @@ The only option that's left is forcing people to work, and that's where comunist
 
 Of course. People create wealth for themselves (and for their close relationships). Like it or not, we are like that. This is the fact that comunism blindly and naively ignores.
 
-## Socialism
+# Socialism
 
 Socialism is basically a more diluted form of communism. They practice it through high taxes instead of complete expropiation, but the concept is the same. They want everyone to be equally rich. Cute.
 
