added google analytics and twitter share

--- a/pages/2020/capitalism-always-wins.mdx
+++ b/pages/2020/capitalism-always-wins.mdx
@@ -53,4 +53,4 @@ The root of most of the arguments against capitalism is the fallacy of thinking 
 
 Fortunately, this is not true. Wealth is created, not taken. So lets create and exchange!
 
-Thanks for reading.
+<footer title="Why Capitalism always wins" />
