--- a/pages/2020/react-dark-mode.mdx
+++ b/pages/2020/react-dark-mode.mdx
@@ -202,4 +202,4 @@ export const useColorMode = () => useContext(ColorModeContext);
 
 <codesandbox src='https://codesandbox.io/s/lively-water-07qsu' />
 
-Thanks for reading!
+<footer title="The Simplest Way to Build Dark Mode With React and CSS" />
