--- a/pages/2020/react-firebase.mdx
+++ b/pages/2020/react-firebase.mdx
@@ -110,4 +110,4 @@ After that, we create a custom hook shorthand to <ic>useFirebase</ic>.
 
 The only thing tha's left is to wrap our top level component in the exported provider and that's it!
 
-Thanks for reading. Be well.
+<footer title="The Best Way to Use Firebase In A React Application" />
