--- a/pages/2020/mayeutica.mdx
+++ b/pages/2020/mayeutica.mdx
@@ -5,9 +5,26 @@ export default ({ children }) => <Layout pagetitle='Mayéutica'>{children}</Layo
 
 Mayéutica is the first spanish-speaking online school for midwives. They'd been teaching for two years through a general purpose platform, and now they wanted better.
 
-## A better experience, for teachers and for students
+## Their Inspiring Mission
 
-<screenshot src='/event-photos/mayeutica/old-dashboard.png' alt='Old dashboard' caption='The old dashboard that the team dealt with' />
+Disclaimer: these is not their "official" mission, it is just the way I see it.
+
+Probably one of the most important parts of our whole lives is the first one: our birth. But nowadays, births don't get treated accordingly. In regular hospitals, often times women have to stick to the doctor's schedule, recieving inductions (stuff that accelerates labour) so that doctors can finish and move on to the next. It's normal for women to feel rushed, guilty, weird, if they don't check all the boxes in their doc's notebook. Inside hospitals, the protagonists are the doctors.
+
+Nowadays, we think that births have to be fully controlled by them. The reality is that they have to intervene only in special cases, and that most of the times, if the natural rythm is followed, <b>the birth will go just fine</b>.
+
+Giving birth is the most natural thing for a woman. It's <i>really</i> the most natual thing. We've been doing it literally since the dawn of our species. So why, during the last century, we started seeing it as a pathology to be treated?
+
+Do people drive alongside an ambulance at all times? No, because driving is not something to treat. Accidents can happen, that's where ambulances come into play. Why is not this the case for births?
+
+Well, we want to controll everything. If it weren't absolutely impractical to put an ambulance alongside every driver we'd do it. But sometimes, being so rigid and burocratic makes you lose the natural way.
+
+So Mayéutica is on a path to empower and educate.
+
+- To empower women, so they know that <i>they</i> are in control.
+- To educate midwives, so they can better <i>assist</i> women.
+
+Fundamentally, they believe that giving birth is a natual thing, and that it's about letting it flow instead of trying to control it. They believe that this would lead to more harmonious births, and be better for the women and for their children.
 
 ## Tech stack
 
@@ -18,3 +35,7 @@ Mayéutica is the first spanish-speaking online school for midwives. They'd been
 - [Sendgrid](https://sendgrid.com) for the newsletter
 - [Airtable](https://airtable.com) as the quiz database
 - [Notion](https://notion.so), cause I convinced everyone on the team to use it 😁
+
+## Some Screenshots
+
+<screenshot src='/event-photos/mayeutica/old-dashboard.png' alt='Old dashboard' caption='The old dashboard that the team dealt with' />
