--- a/pages/2020/la-derecha-diario.mdx
+++ b/pages/2020/la-derecha-diario.mdx
@@ -1,5 +1,5 @@
 import Layout from "../../components/mdx/Layout"
-export default ({ children }) => <Layout pagetitle='La Derecha Diario'>{children}</Layout>
+export default ({ children }) => <Layout pagetitle='La Derecha Diario' description="A digital newspaper that doesn't compromise on Truth." image="/event-photos/ldd/home.png">{children}</Layout>
 
 # La Derecha Diario
 
