--- a/pages/2020/react-firebase.mdx
+++ b/pages/2020/react-firebase.mdx
@@ -3,6 +3,10 @@ export default ({ children }) => <Layout pagetitle='The Best Way to Use Firebase
 
 # The Best Way to Use Firebase In A React Application
 
+**Update:** I made an [example](https://github.com/zeit/next.js/tree/canary/examples/with-firebase) for this simple setup!
+
+---
+
 I used [Firebase](https://firebase.google.com) a lot. It empowered me to build fully fledged applications: 
 
 - with authentication
