fixed wrong tense

--- a/pages/2020/react-firebase.mdx
+++ b/pages/2020/react-firebase.mdx
@@ -7,7 +7,7 @@ export default ({ children }) => <Layout pagetitle='The Best Way to Use Firebase
 
 ---
 
-I used [Firebase](https://firebase.google.com) a lot. It empowered me to build fully fledged applications: 
+I've used [Firebase](https://firebase.google.com) a lot. It empowered me to build fully fledged applications: 
 
 - with authentication
 - with a database
