--- a/pages/2020/theme-ui.mdx
+++ b/pages/2020/theme-ui.mdx
@@ -46,7 +46,7 @@ Tailwind optimizes for speed, and if that's what you want most of all, then it's
 
 # vs CSS Modules
 
-I love CSS modules. I think is much better than Tailwind (sorry tailwind) because it has no tradeoffs in relation to css, and it's syntax is as standard as it gets.
+I love CSS modules. I think it's much better than Tailwind (sorry tailwind) because it has no tradeoffs in relation to css, and it's syntax is as standard as it gets.
 
 The things that makes me prefer Theme-UI over CSS modules are:
 
