--- a/pages/2020/theme-ui.mdx
+++ b/pages/2020/theme-ui.mdx
@@ -9,13 +9,13 @@ export default ({ children }) => (
 
 If you don't know anything about Theme-UI, check out their [Getting Started guide](https://theme-ui.com/getting-started).
 
-# Why
+## Why
 
 I won't be able to explain it better than the creator itself, so checkout _[Two Steps Forward, One Step Back](https://jxnblk.com/blog/two-steps-forward/),_ by the amazing [@jxnblk](https://twitter.com/jxnblk)
 
 **tl;dr**? [Go read it](https://jxnblk.com/blog/two-steps-forward/).
 
-# vs TailwindCSS
+## vs TailwindCSS
 
 From [Two Steps Forward, One Step Back](https://jxnblk.com/blog/two-steps-forward/)_:_
 
@@ -44,7 +44,7 @@ Lastly, Tailwind doesn't handle multiple color modes out of the box. If you want
 
 Tailwind optimizes for speed, and if that's what you want most of all, then it's a good choice. Theme-UI offers a more holistic approach that can cover more edge use cases, with a more elegant api.
 
-# vs CSS Modules
+## vs CSS Modules
 
 I love CSS modules. I think it's much better than Tailwind (sorry tailwind) because it has no tradeoffs in relation to css, and it's syntax is as standard as it gets.
 
@@ -156,7 +156,7 @@ Another con is that, with all the styles and markup in the same place, it _can_ 
 
 Finally, performance might be a con. I'm saying "might" because I haven't actually benchmarked it, and am quite ignorant in this sense. I suspect it's not as performant as css modules (more things happening in the JS side)? Don't really know, but I wanted to leave this as a possible caveat.
 
-# Conclusion
+## Conclusion
 
 I think it's clear that I don't like TailwindCSS (I really like their default theme, though, and Steve Schoger is kind of my idol). If you want more standard "css goes in a `.css`", CSS Modules is a fine choice.
 
