--- a/pages/2020/la-derecha-diario.mdx
+++ b/pages/2020/la-derecha-diario.mdx
@@ -1,5 +1,13 @@
-import Layout from "../../components/mdx/Layout"
-export default ({ children }) => <Layout pagetitle='La Derecha Diario' description="A digital newspaper that doesn't compromise on Truth." image="/event-photos/ldd/home.png">{children}</Layout>
+import Layout from '../../components/mdx/Layout'
+export default ({ children }) => (
+  <Layout
+    pagetitle="La Derecha Diario"
+    description="A digital newspaper that doesn't compromise on Truth."
+    image="/event-photos/ldd/home.png"
+  >
+    {children}
+  </Layout>
+)
 
 # La Derecha Diario
 
@@ -25,7 +33,10 @@ It was an absolute pleasure to work with these guys. The service they are doing 
 
 I reached out to him via Twitter DM, offering my services. I had just finished a project and was quite exited by what they were doing. After some talk, I joined the team.
 
-<screenshot src="/event-photos/ldd/enter.png" caption="Sign in / sign up is a modal. Who wants to go to another page to sign in?" />
+<screenshot
+  src="/event-photos/ldd/enter.png"
+  caption="Sign in / sign up is a modal. Who wants to go to another page to sign in?"
+/>
 
 I iterated the design in Figma for a couple of weeks before writing any code. The first part was slow (mainly because it was right between holidays!), but then we moved fast. I worked alongside another developer and we wrote the initial code in ~ a month.
 
@@ -43,9 +54,12 @@ And we are quite happy with it.
 
 I'd say the toughtest part was writing all the admin parts of the site (like what the admins can see, how the editors create an article, how the front page is managed...). There were various levels of user privileges, tables, actions, filters. Boring stuff that had to be dealt with delicately.
 
-<screenshot src="/event-photos/ldd/admin.png" caption="Custom table component (that I'll reuse everywhere cause it was lots of work)" />
+<screenshot
+  src="/event-photos/ldd/admin.png"
+  caption="Custom table component (that I'll reuse everywhere cause it was lots of work)"
+/>
 
-Another challenge was creating the data structure. We used Firebase's Firestore. I don't have trouble with it being no-SQL because I never really worked a lot with an SQL database, but the challenge was keeping it cheap. 
+Another challenge was creating the data structure. We used Firebase's Firestore. I don't have trouble with it being no-SQL because I never really worked a lot with an SQL database, but the challenge was keeping it cheap.
 
 FB charges you by document read (and other stuff also, but reads are the most used action on a news site), so we had to make sure that users could get by reading the least amount of documents possible. That meant duplicating data through our Firestore and that was perfectly fine. Our Firestore usage is currently quite low for the amount of users we are serving, so that's neat.
 
