--- a/pages/2020/capitalism-always-wins.mdx
+++ b/pages/2020/capitalism-always-wins.mdx
@@ -1,13 +1,15 @@
-import Layout from "../../components/mdx/Layout"
-export default ({ children }) => <Layout pagetitle='Why Capitalism always wins'>{children}</Layout>
+import Layout from '../../components/mdx/Layout'
+export default ({ children }) => (
+  <Layout pagetitle="Why Capitalism always wins">{children}</Layout>
+)
 
 # Why Capitalism always wins
 
-It's quite simple, actually. Humans act on incentives (all living things do, but we only care about human ones), and capitalism is the system that aligns those perfectly. There really aren't any systems more efficient than capitalism because no other system understands human incentives the way capitalism does. Let's take a look.
+Humans act on incentives (all living things do, but we only care about human ones), and capitalism is the system that aligns those perfectly. There really aren't any systems more efficient than capitalism because no other system understands human incentives the way capitalism does. Let's take a look.
 
 # Comunism
 
-In summary, comunism says, "We want everyone to be equally rich (or poor), no matter if some create more wealth than others." It basically removes the economic incentive for creating wealth. 
+In summary, comunism says, "We want everyone to be equally rich (or poor), no matter if some create more wealth than others." It basically removes the economic incentive for creating wealth.
 
 - The ones that create wealth are now less motivated to create
 - The ones that don't create wealth and still have access to it, well, why would they start creating?
@@ -22,7 +24,7 @@ Of course. People create wealth for themselves (and for their close relationship
 
 Socialism is basically a more diluted form of communism. They practice it through high taxes instead of complete expropiation, but the concept is the same. They want everyone to be equally rich. Cute.
 
-Socialists are usually good people that don't really think it through, and by default they land on socialism. It's an attractive idea: we could all be equally rich! Sadly, it ends the same way: 
+Socialists are usually good people that don't really think it through, and by default they land on socialism. It's an attractive idea: we could all be equally rich! Sadly, it ends the same way:
 
 - How can we all be equally rich? Taking from the rich<i>-er</i> and giving to the poor<i>-er</i>
 - The rich, seeing that they can't fully enjoy the fruits of their work, are less incentivized to create
@@ -40,7 +42,7 @@ With every political-economical decision that your government does, ask yourself
 
 # The Beauty Of Capitalism
 
-If you think about it, every law in a pure capitalist system is made to improve incentives. 
+If you think about it, every law in a pure capitalist system is made to improve incentives.
 
 - "You'll get to keep what you make"
 - "We'll keep you safe from criminals, so you can focus on being more prosperous"
