--- a/pages/2020/aim.mdx
+++ b/pages/2020/aim.mdx
@@ -19,4 +19,4 @@ You'll never get it.
 
 So what do you do? Aim. That's what you do. Focus on your objectives. Know your destination vividly. Start from there.
 
-The journey doesn't matter. Try to enjoy it, sure, but focus on your aim. It's always about the destination.
+In the era of information: constant productivity hacks, dozens of apps, a sea of self-help books... trust yourself. Which journey doesn't matter. Try to enjoy it, sure, but focus on your aim. It's always about the destination.
