--- a/pages/2020/aim.mdx
+++ b/pages/2020/aim.mdx
@@ -1,22 +1,28 @@
 import Layout from '../../components/mdx/Layout'
 export default ({ children }) => (
-  <Layout pagetitle="No, it's not about the journey">{children}</Layout>
+  <Layout pagetitle="It's up to You">{children}</Layout>
 )
 
-# No, it's not about the journey
+# It's up to You
 
-We've all heard it. Meditate. Do a couple of push ups every day. Walk. Eat right. Forget objectives, focus on systems.
+We've all heard these:
 
-All these are "good" things. But for what? We read some tweet of some guy we admire and then decided that we should follow what he did, and then we'll be like him.
+- Meditate
+- Do a couple of push ups every day
+- Walk, run, lift weights
+- Eat only meat / don't eat meat
+- Forget objectives, focus on [my] "systems"
 
-But we can't. It's impossible, because there are simply too many details.
+All these might be "good" things, no question. **But good for _what_?**
 
-Take for example, Tiger Wood's swing. Watch it in slow motion. Try your best to imitate him.
+We read some tweet of some guy we admire and then decided that we should follow what he did, and then we'll achieve what he achieved. The thing is... there are too many details to copy.
 
-Have him coach you all day every day. Ask him how he does it. He doesn't know. There are too many details. Nuances.
+Take, for example, Tiger Wood's swing. Watch it in slow motion. Try your best to imitate him. Have him coach you all day every day for years. You won't get it. Ask him how he does it... not even he knows. Sure, he'll throw at you some tips and tricks just to say something... but really, he doesn't have a clue.
 
-You'll never get it.
+So what do you do? You aim. You focus on your objectives, understand your destination vividly, and let your brain work. It's up to you, and only up to you.
 
-So what do you do? Aim. That's what you do. Focus on your objectives. Know your destination vividly. Start from there.
+It's not that you can't get it if you follow coaching, tips amd tricks, hacks, how-to's; it's just less efficient, and therefore lowers your chances of success.
 
-In the era of information: constant productivity hacks, dozens of apps, a sea of self-help books... trust yourself. Which journey doesn't matter. Try to enjoy it, sure, but focus on your aim. It's always about the destination.
+> Coaches and teachers will only delay a focused mind.
+
+In the era of information: constant productivity hacks, dozens of apps and "tools", a sea of self-help books: trust yourself. Aim, and proceed.
